// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Handle error cases while getting UI5 versions:  UI5 versions fallback for v2 if official is not available  1`] = `
Array [
  "Latest",
  "1.104.0",
  "1.103.0",
  "1.102.0",
  "1.101.0",
  "1.100.0",
  "1.99.0",
  "1.98.0",
  "1.97.0",
  "1.96.0",
  "1.95.0",
  "1.94.0",
  "1.93.0",
  "1.92.0",
  "1.91.0",
  "1.90.0",
  "1.89.0",
  "1.88.0",
  "1.87.0",
  "1.86.0",
  "1.85.0",
  "1.84.0",
  "1.82.0",
  "1.81.0",
  "1.80.0",
  "1.79.0",
  "1.78.0",
  "1.77.0",
  "1.76.0",
  "1.75.0",
  "1.74.0",
  "1.73.0",
  "1.72.0",
  "1.71.0",
  "1.70.0",
  "1.69.0",
  "1.68.0",
  "1.67.0",
  "1.66.0",
  "1.65.0",
]
`;

exports[`Handle error cases while getting UI5 versions:  UI5 versions fallback for v4 if official is not available  1`] = `
Array [
  "Latest",
  "1.104.0",
  "1.103.0",
  "1.102.0",
  "1.101.0",
  "1.100.0",
  "1.99.0",
  "1.98.0",
  "1.97.0",
  "1.96.0",
  "1.95.0",
  "1.94.0",
  "1.93.0",
  "1.92.0",
  "1.91.0",
  "1.90.0",
  "1.89.0",
  "1.88.0",
  "1.87.0",
  "1.86.0",
  "1.85.0",
  "1.84.0",
]
`;

exports[`Handle error cases while getting UI5 versions:  UI5 versions fallback if official is not available  1`] = `
Array [
  "Latest",
  "1.104.0",
  "1.103.0",
  "1.102.0",
  "1.101.0",
  "1.100.0",
  "1.99.0",
  "1.98.0",
  "1.97.0",
  "1.96.0",
  "1.95.0",
  "1.94.0",
  "1.93.0",
  "1.92.0",
  "1.91.0",
  "1.90.0",
  "1.89.0",
  "1.88.0",
  "1.87.0",
  "1.86.0",
  "1.85.0",
  "1.84.0",
  "1.82.0",
  "1.81.0",
  "1.80.0",
  "1.79.0",
  "1.78.0",
  "1.77.0",
  "1.76.0",
  "1.75.0",
  "1.74.0",
  "1.73.0",
  "1.72.0",
  "1.71.0",
  "1.70.0",
  "1.69.0",
  "1.68.0",
  "1.67.0",
  "1.66.0",
  "1.65.0",
]
`;

exports[`Handle error cases while getting UI5 versions:  UI5 versions fallback if snapshot is not available  1`] = `
Array [
  "Latest",
  "1.104.0",
  "1.103.0",
  "1.102.0",
  "1.101.0",
  "1.100.0",
  "1.99.0",
  "1.98.0",
  "1.97.0",
  "1.96.0",
  "1.95.0",
  "1.94.0",
  "1.93.0",
  "1.92.0",
  "1.91.0",
  "1.90.0",
  "1.89.0",
  "1.88.0",
  "1.87.0",
  "1.86.0",
  "1.85.0",
  "1.84.0",
  "1.82.0",
  "1.81.0",
  "1.80.0",
  "1.79.0",
  "1.78.0",
  "1.77.0",
  "1.76.0",
  "1.75.0",
  "1.74.0",
  "1.73.0",
  "1.72.0",
  "1.71.0",
  "1.70.0",
  "1.69.0",
  "1.68.0",
  "1.67.0",
  "1.66.0",
  "1.65.0",
]
`;

exports[`Handle fatal cases while getting UI5 versions:  UI5 versions fallback if official is not available  1`] = `
Array [
  "Latest",
  "1.104.0",
  "1.103.0",
  "1.102.0",
  "1.101.0",
  "1.100.0",
  "1.99.0",
  "1.98.0",
  "1.97.0",
  "1.96.0",
  "1.95.0",
  "1.94.0",
  "1.93.0",
  "1.92.0",
  "1.91.0",
  "1.90.0",
  "1.89.0",
  "1.88.0",
  "1.87.0",
  "1.86.0",
  "1.85.0",
  "1.84.0",
  "1.82.0",
  "1.81.0",
  "1.80.0",
  "1.79.0",
  "1.78.0",
  "1.77.0",
  "1.76.0",
  "1.75.0",
  "1.74.0",
  "1.73.0",
  "1.72.0",
  "1.71.0",
  "1.70.0",
  "1.69.0",
  "1.68.0",
  "1.67.0",
  "1.66.0",
  "1.65.0",
]
`;

exports[`Handle fatal cases while getting UI5 versions:  UI5 versions fallback if snapshot is not available  1`] = `
Array [
  "Latest",
  "1.104.0",
  "1.103.0",
  "1.102.0",
  "1.101.0",
  "1.100.0",
  "1.99.0",
  "1.98.0",
  "1.97.0",
  "1.96.0",
  "1.95.0",
  "1.94.0",
  "1.93.0",
  "1.92.0",
  "1.91.0",
  "1.90.0",
  "1.89.0",
  "1.88.0",
  "1.87.0",
  "1.86.0",
  "1.85.0",
  "1.84.0",
  "1.82.0",
  "1.81.0",
  "1.80.0",
  "1.79.0",
  "1.78.0",
  "1.77.0",
  "1.76.0",
  "1.75.0",
  "1.74.0",
  "1.73.0",
  "1.72.0",
  "1.71.0",
  "1.70.0",
  "1.69.0",
  "1.68.0",
  "1.67.0",
  "1.66.0",
  "1.65.0",
]
`;

exports[`Test functions for theme retrieval and manifest versions:  Get all themes 1`] = `
Array [
  Object {
    "label": "Belize",
    "themeid": "sap_belize",
  },
  Object {
    "label": "Quartz Light",
    "themeid": "sap_fiori_3",
  },
  Object {
    "label": "Quartz Dark",
    "themeid": "sap_fiori_3_dark",
  },
  Object {
    "label": "Morning Horizon",
    "themeid": "sap_horizon",
  },
  Object {
    "label": "Evening Horizon",
    "themeid": "sap_horizon_dark",
  },
]
`;

exports[`Test functions for theme retrieval and manifest versions:  Get theme for version version 1.102 1`] = `
Array [
  Object {
    "label": "Belize",
    "themeid": "sap_belize",
  },
  Object {
    "label": "Quartz Light",
    "themeid": "sap_fiori_3",
  },
  Object {
    "label": "Quartz Dark",
    "themeid": "sap_fiori_3_dark",
  },
  Object {
    "label": "Morning Horizon",
    "themeid": "sap_horizon",
  },
  Object {
    "label": "Evening Horizon",
    "themeid": "sap_horizon_dark",
  },
]
`;

exports[`Test functions for theme retrieval and manifest versions:  Get themes for version 1.71.0 1`] = `
Array [
  Object {
    "label": "Belize",
    "themeid": "sap_belize",
  },
  Object {
    "label": "Quartz Light",
    "themeid": "sap_fiori_3",
  },
]
`;

exports[`Test functions for theme retrieval and manifest versions:  Get themes for version 1.93.3 1`] = `
Array [
  Object {
    "label": "Belize",
    "themeid": "sap_belize",
  },
  Object {
    "label": "Quartz Light",
    "themeid": "sap_fiori_3",
  },
  Object {
    "label": "Quartz Dark",
    "themeid": "sap_fiori_3_dark",
  },
]
`;

exports[`Test functions for theme retrieval and manifest versions:  Get themes for version 1.96.0 1`] = `
Array [
  Object {
    "label": "Belize",
    "themeid": "sap_belize",
  },
  Object {
    "label": "Quartz Light",
    "themeid": "sap_fiori_3",
  },
  Object {
    "label": "Quartz Dark",
    "themeid": "sap_fiori_3_dark",
  },
]
`;

exports[`Test functions for theme retrieval and manifest versions:  Test zeroExtendUI5Version() version 1.96 1`] = `
Array [
  Object {
    "label": "Belize",
    "themeid": "sap_belize",
  },
  Object {
    "label": "Quartz Light",
    "themeid": "sap_fiori_3",
  },
  Object {
    "label": "Quartz Dark",
    "themeid": "sap_fiori_3_dark",
  },
]
`;

exports[`Test functions for theme retrieval and manifest versions:  Test zeroExtendUI5Version() version snapshot-1.72 1`] = `
Array [
  Object {
    "label": "Belize",
    "themeid": "sap_belize",
  },
  Object {
    "label": "Quartz Light",
    "themeid": "sap_fiori_3",
  },
  Object {
    "label": "Quartz Dark",
    "themeid": "sap_fiori_3_dark",
  },
]
`;

exports[`Test functions for theme retrieval and manifest versions:  Test zeroExtendUI5Version() version snapshot-untested 1`] = `
Array [
  Object {
    "label": "Belize",
    "themeid": "sap_belize",
  },
  Object {
    "label": "Quartz Light",
    "themeid": "sap_fiori_3",
  },
  Object {
    "label": "Quartz Dark",
    "themeid": "sap_fiori_3_dark",
  },
  Object {
    "label": "Morning Horizon",
    "themeid": "sap_horizon",
  },
  Object {
    "label": "Evening Horizon",
    "themeid": "sap_horizon_dark",
  },
]
`;

exports[`retrieveUI5Versions:  Latest UI5 with version number 1`] = `
Array [
  "1.109.3",
  "1.109.2",
  "1.109.1",
  "1.109.0",
  "1.108.4",
  "1.108.3",
  "1.108.2",
  "1.108.1",
  "1.108.0",
  "1.107.1",
  "1.107.0",
  "1.106.1",
  "1.106.0",
  "1.105.4",
  "1.105.3",
  "1.105.2",
  "1.105.1",
  "1.105.0",
  "1.104.2",
  "1.104.1",
  "1.104.0",
  "1.103.1",
  "1.103.0",
  "1.102.13",
  "1.102.12",
  "1.102.11",
  "1.102.10",
  "1.102.9",
  "1.102.8",
  "1.102.7",
  "1.102.6",
  "1.102.5",
  "1.102.4",
  "1.102.3",
  "1.102.2",
  "1.102.1",
  "1.102.0",
  "1.101.1",
  "1.101.0",
  "1.100.2",
  "1.100.1",
  "1.100.0",
  "1.99.4",
  "1.99.3",
  "1.99.2",
  "1.99.1",
  "1.99.0",
  "1.98.0",
  "1.97.2",
  "1.97.1",
  "1.97.0",
  "1.96.16",
  "1.96.15",
  "1.96.14",
  "1.96.13",
  "1.96.12",
  "1.96.11",
  "1.96.10",
  "1.96.9",
  "1.96.8",
  "1.96.7",
  "1.96.6",
  "1.96.5",
  "1.96.4",
  "1.96.3",
  "1.96.2",
  "1.96.1",
  "1.96.0",
  "1.95.0",
  "1.94.1",
  "1.93.7",
  "1.93.6",
  "1.93.5",
  "1.93.4",
  "1.93.3",
  "1.93.2",
  "1.93.0",
  "1.92.2",
  "1.92.1",
  "1.92.0",
  "1.91.1",
  "1.90.14",
  "1.90.13",
  "1.90.12",
  "1.90.11",
  "1.90.10",
  "1.90.9",
  "1.90.8",
  "1.90.7",
  "1.90.6",
  "1.90.0",
  "1.87.7",
  "1.84.31",
  "1.84.30",
  "1.84.29",
  "1.84.28",
  "1.84.27",
  "1.84.26",
  "1.84.25",
  "1.84.24",
  "1.84.23",
  "1.84.22",
  "1.84.21",
  "1.84.20",
  "1.84.19",
  "1.84.16",
  "1.84.13",
  "1.84.8",
  "1.84.3",
  "1.84.1",
  "1.84.0",
  "1.82.0",
  "1.80.0",
  "1.78.9",
  "1.75.0",
  "1.74.0",
  "1.73.1",
  "1.71.53",
  "1.71.52",
  "1.71.51",
  "1.71.50",
  "1.71.49",
  "1.71.48",
  "1.71.47",
  "1.71.46",
  "1.71.45",
  "1.71.44",
  "1.71.43",
  "1.71.42",
  "1.71.41",
  "1.71.40",
  "1.71.39",
  "1.71.36",
  "1.71.35",
  "1.71.33",
  "1.71.30",
  "1.71.29",
  "1.71.24",
  "1.71.23",
  "1.71.22",
  "1.71.17",
  "1.71.9",
  "1.71.5",
  "1.71.2",
  "1.65.1",
]
`;

exports[`retrieveUI5Versions:  Official + snapshot UI versions for v2 1`] = `
Array [
  "snapshot",
  "snapshot-untested",
  "1.109.3",
  "1.109.2",
  "1.109.1",
  "1.109.0",
  "1.108.4",
  "1.108.3",
  "1.108.2",
  "1.108.1",
  "1.108.0",
  "1.107.1",
  "1.107.0",
  "1.106.1",
  "1.106.0",
  "1.105.4",
  "1.105.3",
  "1.105.2",
  "1.105.1",
  "1.105.0",
  "1.104.2",
  "1.104.1",
  "1.104.0",
  "1.103.1",
  "1.103.0",
  "1.102.13",
  "1.102.12",
  "1.102.11",
  "1.102.10",
  "1.102.9",
  "1.102.8",
  "1.102.7",
  "1.102.6",
  "1.102.5",
  "1.102.4",
  "1.102.3",
  "1.102.2",
  "1.102.1",
  "1.102.0",
  "1.101.1",
  "1.101.0",
  "1.100.2",
  "1.100.1",
  "1.100.0",
  "1.99.4",
  "1.99.3",
  "1.99.2",
  "1.99.1",
  "1.99.0",
  "1.98.0",
  "1.97.2",
  "1.97.1",
  "1.97.0",
  "1.96.16",
  "1.96.15",
  "1.96.14",
  "1.96.13",
  "1.96.12",
  "1.96.11",
  "1.96.10",
  "1.96.9",
  "1.96.8",
  "1.96.7",
  "1.96.6",
  "1.96.5",
  "1.96.4",
  "1.96.3",
  "1.96.2",
  "1.96.1",
  "1.96.0",
  "1.95.0",
  "1.94.1",
  "1.93.7",
  "1.93.6",
  "1.93.5",
  "1.93.4",
  "1.93.3",
  "1.93.2",
  "1.93.0",
  "1.92.2",
  "1.92.1",
  "1.92.0",
  "1.91.1",
  "1.90.14",
  "1.90.13",
  "1.90.12",
  "1.90.11",
  "1.90.10",
  "1.90.9",
  "1.90.8",
  "1.90.7",
  "1.90.6",
  "1.90.0",
  "1.87.7",
  "1.84.31",
  "1.84.30",
  "1.84.29",
  "1.84.28",
  "1.84.27",
  "1.84.26",
  "1.84.25",
  "1.84.24",
  "1.84.23",
  "1.84.22",
  "1.84.21",
  "1.84.20",
  "1.84.19",
  "1.84.16",
  "1.84.13",
  "1.84.8",
  "1.84.3",
  "1.84.1",
  "1.84.0",
  "snapshot-1.83",
  "snapshot-1.82",
  "1.82.0",
  "snapshot-1.81",
  "snapshot-1.80",
  "1.80.0",
  "snapshot-1.79",
  "snapshot-1.78",
  "1.78.9",
  "snapshot-1.77",
  "snapshot-1.76",
  "snapshot-1.75",
  "1.75.0",
  "snapshot-1.74",
  "1.74.0",
  "snapshot-1.73",
  "1.73.1",
  "snapshot-1.72",
  "snapshot-1.71",
  "1.71.53",
  "1.71.52",
  "1.71.51",
  "1.71.50",
  "1.71.49",
  "1.71.48",
  "1.71.47",
  "1.71.46",
  "1.71.45",
  "1.71.44",
  "1.71.43",
  "1.71.42",
  "1.71.41",
  "1.71.40",
  "1.71.39",
  "1.71.36",
  "1.71.35",
  "1.71.33",
  "1.71.30",
  "1.71.29",
  "1.71.24",
  "1.71.23",
  "1.71.22",
  "1.71.17",
  "1.71.9",
  "1.71.5",
  "1.71.2",
  "snapshot-1.70",
  "snapshot-1.69",
  "snapshot-1.68",
  "snapshot-1.67",
  "snapshot-1.66",
  "1.65.1",
]
`;

exports[`retrieveUI5Versions:  Official + snapshot UI versions for v4 1`] = `
Array [
  "snapshot",
  "snapshot-untested",
  "1.109.3",
  "1.109.2",
  "1.109.1",
  "1.109.0",
  "1.108.4",
  "1.108.3",
  "1.108.2",
  "1.108.1",
  "1.108.0",
  "1.107.1",
  "1.107.0",
  "1.106.1",
  "1.106.0",
  "1.105.4",
  "1.105.3",
  "1.105.2",
  "1.105.1",
  "1.105.0",
  "1.104.2",
  "1.104.1",
  "1.104.0",
  "1.103.1",
  "1.103.0",
  "1.102.13",
  "1.102.12",
  "1.102.11",
  "1.102.10",
  "1.102.9",
  "1.102.8",
  "1.102.7",
  "1.102.6",
  "1.102.5",
  "1.102.4",
  "1.102.3",
  "1.102.2",
  "1.102.1",
  "1.102.0",
  "1.101.1",
  "1.101.0",
  "1.100.2",
  "1.100.1",
  "1.100.0",
  "1.99.4",
  "1.99.3",
  "1.99.2",
  "1.99.1",
  "1.99.0",
  "1.98.0",
  "1.97.2",
  "1.97.1",
  "1.97.0",
  "1.96.16",
  "1.96.15",
  "1.96.14",
  "1.96.13",
  "1.96.12",
  "1.96.11",
  "1.96.10",
  "1.96.9",
  "1.96.8",
  "1.96.7",
  "1.96.6",
  "1.96.5",
  "1.96.4",
  "1.96.3",
  "1.96.2",
  "1.96.1",
  "1.96.0",
  "1.95.0",
  "1.94.1",
  "1.93.7",
  "1.93.6",
  "1.93.5",
  "1.93.4",
  "1.93.3",
  "1.93.2",
  "1.93.0",
  "1.92.2",
  "1.92.1",
  "1.92.0",
  "1.91.1",
  "1.90.14",
  "1.90.13",
  "1.90.12",
  "1.90.11",
  "1.90.10",
  "1.90.9",
  "1.90.8",
  "1.90.7",
  "1.90.6",
  "1.90.0",
  "1.87.7",
  "1.84.31",
  "1.84.30",
  "1.84.29",
  "1.84.28",
  "1.84.27",
  "1.84.26",
  "1.84.25",
  "1.84.24",
  "1.84.23",
  "1.84.22",
  "1.84.21",
  "1.84.20",
  "1.84.19",
  "1.84.16",
  "1.84.13",
  "1.84.8",
  "1.84.3",
  "1.84.1",
  "1.84.0",
]
`;

exports[`retrieveUI5Versions:  Official + snapshot UI5 versions 1`] = `
Array [
  "snapshot",
  "snapshot-untested",
  "1.109.3",
  "1.109.2",
  "1.109.1",
  "1.109.0",
  "1.108.4",
  "1.108.3",
  "1.108.2",
  "1.108.1",
  "1.108.0",
  "1.107.1",
  "1.107.0",
  "1.106.1",
  "1.106.0",
  "1.105.4",
  "1.105.3",
  "1.105.2",
  "1.105.1",
  "1.105.0",
  "1.104.2",
  "1.104.1",
  "1.104.0",
  "1.103.1",
  "1.103.0",
  "1.102.13",
  "1.102.12",
  "1.102.11",
  "1.102.10",
  "1.102.9",
  "1.102.8",
  "1.102.7",
  "1.102.6",
  "1.102.5",
  "1.102.4",
  "1.102.3",
  "1.102.2",
  "1.102.1",
  "1.102.0",
  "1.101.1",
  "1.101.0",
  "1.100.2",
  "1.100.1",
  "1.100.0",
  "1.99.4",
  "1.99.3",
  "1.99.2",
  "1.99.1",
  "1.99.0",
  "1.98.0",
  "1.97.2",
  "1.97.1",
  "1.97.0",
  "1.96.16",
  "1.96.15",
  "1.96.14",
  "1.96.13",
  "1.96.12",
  "1.96.11",
  "1.96.10",
  "1.96.9",
  "1.96.8",
  "1.96.7",
  "1.96.6",
  "1.96.5",
  "1.96.4",
  "1.96.3",
  "1.96.2",
  "1.96.1",
  "1.96.0",
  "1.95.0",
  "1.94.1",
  "1.93.7",
  "1.93.6",
  "1.93.5",
  "1.93.4",
  "1.93.3",
  "1.93.2",
  "1.93.0",
  "1.92.2",
  "1.92.1",
  "1.92.0",
  "1.91.1",
  "1.90.14",
  "1.90.13",
  "1.90.12",
  "1.90.11",
  "1.90.10",
  "1.90.9",
  "1.90.8",
  "1.90.7",
  "1.90.6",
  "1.90.0",
  "1.87.7",
  "1.84.31",
  "1.84.30",
  "1.84.29",
  "1.84.28",
  "1.84.27",
  "1.84.26",
  "1.84.25",
  "1.84.24",
  "1.84.23",
  "1.84.22",
  "1.84.21",
  "1.84.20",
  "1.84.19",
  "1.84.16",
  "1.84.13",
  "1.84.8",
  "1.84.3",
  "1.84.1",
  "1.84.0",
  "snapshot-1.83",
  "snapshot-1.82",
  "1.82.0",
  "snapshot-1.81",
  "snapshot-1.80",
  "1.80.0",
  "snapshot-1.79",
  "snapshot-1.78",
  "1.78.9",
  "snapshot-1.77",
  "snapshot-1.76",
  "snapshot-1.75",
  "1.75.0",
  "snapshot-1.74",
  "1.74.0",
  "snapshot-1.73",
  "1.73.1",
  "snapshot-1.72",
  "snapshot-1.71",
  "1.71.53",
  "1.71.52",
  "1.71.51",
  "1.71.50",
  "1.71.49",
  "1.71.48",
  "1.71.47",
  "1.71.46",
  "1.71.45",
  "1.71.44",
  "1.71.43",
  "1.71.42",
  "1.71.41",
  "1.71.40",
  "1.71.39",
  "1.71.36",
  "1.71.35",
  "1.71.33",
  "1.71.30",
  "1.71.29",
  "1.71.24",
  "1.71.23",
  "1.71.22",
  "1.71.17",
  "1.71.9",
  "1.71.5",
  "1.71.2",
  "snapshot-1.70",
  "snapshot-1.69",
  "snapshot-1.68",
  "snapshot-1.67",
  "snapshot-1.66",
  "1.65.1",
]
`;

exports[`retrieveUI5Versions:  Official + snapshot, exclude latest and snapshots 1`] = `
Array [
  "1.109.3",
  "1.109.2",
  "1.109.1",
  "1.109.0",
  "1.108.4",
  "1.108.3",
  "1.108.2",
  "1.108.1",
  "1.108.0",
  "1.107.1",
  "1.107.0",
  "1.106.1",
  "1.106.0",
  "1.105.4",
  "1.105.3",
  "1.105.2",
  "1.105.1",
  "1.105.0",
  "1.104.2",
  "1.104.1",
  "1.104.0",
  "1.103.1",
  "1.103.0",
  "1.102.13",
  "1.102.12",
  "1.102.11",
  "1.102.10",
  "1.102.9",
  "1.102.8",
  "1.102.7",
  "1.102.6",
  "1.102.5",
  "1.102.4",
  "1.102.3",
  "1.102.2",
  "1.102.1",
  "1.102.0",
  "1.101.1",
  "1.101.0",
  "1.100.2",
  "1.100.1",
  "1.100.0",
  "1.99.4",
  "1.99.3",
  "1.99.2",
  "1.99.1",
  "1.99.0",
  "1.98.0",
  "1.97.2",
  "1.97.1",
  "1.97.0",
  "1.96.16",
  "1.96.15",
  "1.96.14",
  "1.96.13",
  "1.96.12",
  "1.96.11",
  "1.96.10",
  "1.96.9",
  "1.96.8",
  "1.96.7",
  "1.96.6",
  "1.96.5",
  "1.96.4",
  "1.96.3",
  "1.96.2",
  "1.96.1",
  "1.96.0",
  "1.95.0",
  "1.94.1",
  "1.93.7",
  "1.93.6",
  "1.93.5",
  "1.93.4",
  "1.93.3",
  "1.93.2",
  "1.93.0",
  "1.92.2",
  "1.92.1",
  "1.92.0",
  "1.91.1",
  "1.90.14",
  "1.90.13",
  "1.90.12",
  "1.90.11",
  "1.90.10",
  "1.90.9",
  "1.90.8",
  "1.90.7",
  "1.90.6",
  "1.90.0",
  "1.87.7",
  "1.84.31",
  "1.84.30",
  "1.84.29",
  "1.84.28",
  "1.84.27",
  "1.84.26",
  "1.84.25",
  "1.84.24",
  "1.84.23",
  "1.84.22",
  "1.84.21",
  "1.84.20",
  "1.84.19",
  "1.84.16",
  "1.84.13",
  "1.84.8",
  "1.84.3",
  "1.84.1",
  "1.84.0",
  "1.82.0",
  "1.80.0",
  "1.78.9",
  "1.75.0",
  "1.74.0",
  "1.73.1",
  "1.71.53",
  "1.71.52",
  "1.71.51",
  "1.71.50",
  "1.71.49",
  "1.71.48",
  "1.71.47",
  "1.71.46",
  "1.71.45",
  "1.71.44",
  "1.71.43",
  "1.71.42",
  "1.71.41",
  "1.71.40",
  "1.71.39",
  "1.71.36",
  "1.71.35",
  "1.71.33",
  "1.71.30",
  "1.71.29",
  "1.71.24",
  "1.71.23",
  "1.71.22",
  "1.71.17",
  "1.71.9",
  "1.71.5",
  "1.71.2",
  "1.65.1",
]
`;

exports[`retrieveUI5Versions:  Official UI versions for v2 1`] = `
Array [
  "1.109.3",
  "1.109.2",
  "1.109.1",
  "1.109.0",
  "1.108.4",
  "1.108.3",
  "1.108.2",
  "1.108.1",
  "1.108.0",
  "1.107.1",
  "1.107.0",
  "1.106.1",
  "1.106.0",
  "1.105.4",
  "1.105.3",
  "1.105.2",
  "1.105.1",
  "1.105.0",
  "1.104.2",
  "1.104.1",
  "1.104.0",
  "1.103.1",
  "1.103.0",
  "1.102.13",
  "1.102.12",
  "1.102.11",
  "1.102.10",
  "1.102.9",
  "1.102.8",
  "1.102.7",
  "1.102.6",
  "1.102.5",
  "1.102.4",
  "1.102.3",
  "1.102.2",
  "1.102.1",
  "1.102.0",
  "1.101.1",
  "1.101.0",
  "1.100.2",
  "1.100.1",
  "1.100.0",
  "1.99.4",
  "1.99.3",
  "1.99.2",
  "1.99.1",
  "1.99.0",
  "1.98.0",
  "1.97.2",
  "1.97.1",
  "1.97.0",
  "1.96.16",
  "1.96.15",
  "1.96.14",
  "1.96.13",
  "1.96.12",
  "1.96.11",
  "1.96.10",
  "1.96.9",
  "1.96.8",
  "1.96.7",
  "1.96.6",
  "1.96.5",
  "1.96.4",
  "1.96.3",
  "1.96.2",
  "1.96.1",
  "1.96.0",
  "1.95.0",
  "1.94.1",
  "1.93.7",
  "1.93.6",
  "1.93.5",
  "1.93.4",
  "1.93.3",
  "1.93.2",
  "1.93.0",
  "1.92.2",
  "1.92.1",
  "1.92.0",
  "1.91.1",
  "1.90.14",
  "1.90.13",
  "1.90.12",
  "1.90.11",
  "1.90.10",
  "1.90.9",
  "1.90.8",
  "1.90.7",
  "1.90.6",
  "1.90.0",
  "1.87.7",
  "1.84.31",
  "1.84.30",
  "1.84.29",
  "1.84.28",
  "1.84.27",
  "1.84.26",
  "1.84.25",
  "1.84.24",
  "1.84.23",
  "1.84.22",
  "1.84.21",
  "1.84.20",
  "1.84.19",
  "1.84.16",
  "1.84.13",
  "1.84.8",
  "1.84.3",
  "1.84.1",
  "1.84.0",
  "1.82.0",
  "1.80.0",
  "1.78.9",
  "1.75.0",
  "1.74.0",
  "1.73.1",
  "1.71.53",
  "1.71.52",
  "1.71.51",
  "1.71.50",
  "1.71.49",
  "1.71.48",
  "1.71.47",
  "1.71.46",
  "1.71.45",
  "1.71.44",
  "1.71.43",
  "1.71.42",
  "1.71.41",
  "1.71.40",
  "1.71.39",
  "1.71.36",
  "1.71.35",
  "1.71.33",
  "1.71.30",
  "1.71.29",
  "1.71.24",
  "1.71.23",
  "1.71.22",
  "1.71.17",
  "1.71.9",
  "1.71.5",
  "1.71.2",
  "1.65.1",
]
`;

exports[`retrieveUI5Versions:  Official UI versions for v4 1`] = `
Array [
  "1.109.3",
  "1.109.2",
  "1.109.1",
  "1.109.0",
  "1.108.4",
  "1.108.3",
  "1.108.2",
  "1.108.1",
  "1.108.0",
  "1.107.1",
  "1.107.0",
  "1.106.1",
  "1.106.0",
  "1.105.4",
  "1.105.3",
  "1.105.2",
  "1.105.1",
  "1.105.0",
  "1.104.2",
  "1.104.1",
  "1.104.0",
  "1.103.1",
  "1.103.0",
  "1.102.13",
  "1.102.12",
  "1.102.11",
  "1.102.10",
  "1.102.9",
  "1.102.8",
  "1.102.7",
  "1.102.6",
  "1.102.5",
  "1.102.4",
  "1.102.3",
  "1.102.2",
  "1.102.1",
  "1.102.0",
  "1.101.1",
  "1.101.0",
  "1.100.2",
  "1.100.1",
  "1.100.0",
  "1.99.4",
  "1.99.3",
  "1.99.2",
  "1.99.1",
  "1.99.0",
  "1.98.0",
  "1.97.2",
  "1.97.1",
  "1.97.0",
  "1.96.16",
  "1.96.15",
  "1.96.14",
  "1.96.13",
  "1.96.12",
  "1.96.11",
  "1.96.10",
  "1.96.9",
  "1.96.8",
  "1.96.7",
  "1.96.6",
  "1.96.5",
  "1.96.4",
  "1.96.3",
  "1.96.2",
  "1.96.1",
  "1.96.0",
  "1.95.0",
  "1.94.1",
  "1.93.7",
  "1.93.6",
  "1.93.5",
  "1.93.4",
  "1.93.3",
  "1.93.2",
  "1.93.0",
  "1.92.2",
  "1.92.1",
  "1.92.0",
  "1.91.1",
  "1.90.14",
  "1.90.13",
  "1.90.12",
  "1.90.11",
  "1.90.10",
  "1.90.9",
  "1.90.8",
  "1.90.7",
  "1.90.6",
  "1.90.0",
  "1.87.7",
  "1.84.31",
  "1.84.30",
  "1.84.29",
  "1.84.28",
  "1.84.27",
  "1.84.26",
  "1.84.25",
  "1.84.24",
  "1.84.23",
  "1.84.22",
  "1.84.21",
  "1.84.20",
  "1.84.19",
  "1.84.16",
  "1.84.13",
  "1.84.8",
  "1.84.3",
  "1.84.1",
  "1.84.0",
]
`;

exports[`retrieveUI5Versions:  Official UI5 versions 1`] = `
Array [
  "1.109.3",
  "1.109.2",
  "1.109.1",
  "1.109.0",
  "1.108.4",
  "1.108.3",
  "1.108.2",
  "1.108.1",
  "1.108.0",
  "1.107.1",
  "1.107.0",
  "1.106.1",
  "1.106.0",
  "1.105.4",
  "1.105.3",
  "1.105.2",
  "1.105.1",
  "1.105.0",
  "1.104.2",
  "1.104.1",
  "1.104.0",
  "1.103.1",
  "1.103.0",
  "1.102.13",
  "1.102.12",
  "1.102.11",
  "1.102.10",
  "1.102.9",
  "1.102.8",
  "1.102.7",
  "1.102.6",
  "1.102.5",
  "1.102.4",
  "1.102.3",
  "1.102.2",
  "1.102.1",
  "1.102.0",
  "1.101.1",
  "1.101.0",
  "1.100.2",
  "1.100.1",
  "1.100.0",
  "1.99.4",
  "1.99.3",
  "1.99.2",
  "1.99.1",
  "1.99.0",
  "1.98.0",
  "1.97.2",
  "1.97.1",
  "1.97.0",
  "1.96.16",
  "1.96.15",
  "1.96.14",
  "1.96.13",
  "1.96.12",
  "1.96.11",
  "1.96.10",
  "1.96.9",
  "1.96.8",
  "1.96.7",
  "1.96.6",
  "1.96.5",
  "1.96.4",
  "1.96.3",
  "1.96.2",
  "1.96.1",
  "1.96.0",
  "1.95.0",
  "1.94.1",
  "1.93.7",
  "1.93.6",
  "1.93.5",
  "1.93.4",
  "1.93.3",
  "1.93.2",
  "1.93.0",
  "1.92.2",
  "1.92.1",
  "1.92.0",
  "1.91.1",
  "1.90.14",
  "1.90.13",
  "1.90.12",
  "1.90.11",
  "1.90.10",
  "1.90.9",
  "1.90.8",
  "1.90.7",
  "1.90.6",
  "1.90.0",
  "1.87.7",
  "1.84.31",
  "1.84.30",
  "1.84.29",
  "1.84.28",
  "1.84.27",
  "1.84.26",
  "1.84.25",
  "1.84.24",
  "1.84.23",
  "1.84.22",
  "1.84.21",
  "1.84.20",
  "1.84.19",
  "1.84.16",
  "1.84.13",
  "1.84.8",
  "1.84.3",
  "1.84.1",
  "1.84.0",
  "1.82.0",
  "1.80.0",
  "1.78.9",
  "1.75.0",
  "1.74.0",
  "1.73.1",
  "1.71.53",
  "1.71.52",
  "1.71.51",
  "1.71.50",
  "1.71.49",
  "1.71.48",
  "1.71.47",
  "1.71.46",
  "1.71.45",
  "1.71.44",
  "1.71.43",
  "1.71.42",
  "1.71.41",
  "1.71.40",
  "1.71.39",
  "1.71.36",
  "1.71.35",
  "1.71.33",
  "1.71.30",
  "1.71.29",
  "1.71.24",
  "1.71.23",
  "1.71.22",
  "1.71.17",
  "1.71.9",
  "1.71.5",
  "1.71.2",
  "1.65.1",
]
`;

exports[`retrieveUI5Versions:  Official, exclude latest 1`] = `
Array [
  "1.109.3",
  "1.109.2",
  "1.109.1",
  "1.109.0",
  "1.108.4",
  "1.108.3",
  "1.108.2",
  "1.108.1",
  "1.108.0",
  "1.107.1",
  "1.107.0",
  "1.106.1",
  "1.106.0",
  "1.105.4",
  "1.105.3",
  "1.105.2",
  "1.105.1",
  "1.105.0",
  "1.104.2",
  "1.104.1",
  "1.104.0",
  "1.103.1",
  "1.103.0",
  "1.102.13",
  "1.102.12",
  "1.102.11",
  "1.102.10",
  "1.102.9",
  "1.102.8",
  "1.102.7",
  "1.102.6",
  "1.102.5",
  "1.102.4",
  "1.102.3",
  "1.102.2",
  "1.102.1",
  "1.102.0",
  "1.101.1",
  "1.101.0",
  "1.100.2",
  "1.100.1",
  "1.100.0",
  "1.99.4",
  "1.99.3",
  "1.99.2",
  "1.99.1",
  "1.99.0",
  "1.98.0",
  "1.97.2",
  "1.97.1",
  "1.97.0",
  "1.96.16",
  "1.96.15",
  "1.96.14",
  "1.96.13",
  "1.96.12",
  "1.96.11",
  "1.96.10",
  "1.96.9",
  "1.96.8",
  "1.96.7",
  "1.96.6",
  "1.96.5",
  "1.96.4",
  "1.96.3",
  "1.96.2",
  "1.96.1",
  "1.96.0",
  "1.95.0",
  "1.94.1",
  "1.93.7",
  "1.93.6",
  "1.93.5",
  "1.93.4",
  "1.93.3",
  "1.93.2",
  "1.93.0",
  "1.92.2",
  "1.92.1",
  "1.92.0",
  "1.91.1",
  "1.90.14",
  "1.90.13",
  "1.90.12",
  "1.90.11",
  "1.90.10",
  "1.90.9",
  "1.90.8",
  "1.90.7",
  "1.90.6",
  "1.90.0",
  "1.87.7",
  "1.84.31",
  "1.84.30",
  "1.84.29",
  "1.84.28",
  "1.84.27",
  "1.84.26",
  "1.84.25",
  "1.84.24",
  "1.84.23",
  "1.84.22",
  "1.84.21",
  "1.84.20",
  "1.84.19",
  "1.84.16",
  "1.84.13",
  "1.84.8",
  "1.84.3",
  "1.84.1",
  "1.84.0",
  "1.82.0",
  "1.80.0",
  "1.78.9",
  "1.75.0",
  "1.74.0",
  "1.73.1",
  "1.71.53",
  "1.71.52",
  "1.71.51",
  "1.71.50",
  "1.71.49",
  "1.71.48",
  "1.71.47",
  "1.71.46",
  "1.71.45",
  "1.71.44",
  "1.71.43",
  "1.71.42",
  "1.71.41",
  "1.71.40",
  "1.71.39",
  "1.71.36",
  "1.71.35",
  "1.71.33",
  "1.71.30",
  "1.71.29",
  "1.71.24",
  "1.71.23",
  "1.71.22",
  "1.71.17",
  "1.71.9",
  "1.71.5",
  "1.71.2",
  "1.65.1",
]
`;
